crates/ddlog-syntax/tests/parse/pass/basic_relation.dl
// kind:item validate:false
relation Something()
