crates/ddlog-syntax/tests/parse/fail/unclosed_relation_args.dl
// kind:item validate:false
relation Foo(
